# svod

./: .copier-answers.yml  .envrc  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  duties.py  index.html  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  1-bug.yml  2-feature.yml  3-docs.md  4-change.md  5-task.yml  config.yml
.github/workflows/: ci.yml  docs.yml
about/: index.html
analysis/: index.html
changelog/: index.html
charts/: clusters.html  waterfall.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
credits/: index.html
docs/: about.md  analysis.md  index.md  methodology.md
docs/.overrides/partials/: comments.html
docs/charts/: clusters.html  concentration.html  market.html  treemap.html  waterfall.html
docs/css/: dataxis.css
docs/reference/: api.md
docs/superpowers/plans/: 2026-07-04-svod-market-analysis.md
docs/superpowers/specs/: 2026-07-04-svod-market-analysis-design.md
license/: index.html
methodology/: index.html
reference/api/: index.html
report/: metrics.json  onepager.typ
scripts/: gen_credits.py  make.py
src/svod/: __init__.py  __main__.py
src/svod/_internal/: analysis.py  charts.py  cli.py  data.py  debug.py  report.py
tests/: __init__.py  conftest.py  test_analysis.py  test_api.py  test_charts.py  test_cli.py  test_data.py  test_report.py
